[NEW] Refactor code of headers